# libhdate-glib

./: Makefile.am  ProjectHome.md  autogen.sh  configure.ac  libhdate-glib.pc.in
examples/: Makefile.am  test.py  test.vala  test_c.vala  test_gjs.js
examples/hdate@kobi/: extension.js  he.po  metadata.json
examples/hdate@kobi/locale/he/LC_MESSAGES/: hdate_button.mo
src/: Makefile.am  hdate-glib.vala
vapi/: Makefile.am  libhdate.vapi
